2nd section of the Website

--- a/index.html
+++ b/index.html
@@ -32,9 +32,25 @@
   </div>
 </section>
 <!--------Next Section-------------------------->
-<section class ="Activity">
+<section class ="training">
   <h1>Our training sessions</h1>
-  <p>Internal training sessions</p>
+  <p>Internal training</p>
+
+  <div class="row">
+    <div class="training-col">
+      <h3>Finance</h3>
+      <p>Provide knowledge about the Financial industry, focusing on building a critical and open mindset for trainees.</p>
+    </div>
+    <div class="training-col">
+      <h3>Security</h3>
+      <p>Basic view over the stock market, how to read and interpret charts and various indicators. These training sessions also ensures the understanding of various types of assets.</p>
+    </div>
+    <div class="training-col">
+      <h3>Career Orientation</h3>
+      <p>Sharing about different fields in the financial industry including securities analyst, financial consultant, audit, etc. from former club memebers.</p>
+    </div>
+    
+  </div>
 
 </section>
 <!--------Javacrpt for Toggle Mobile Menu------->
