3rd section added for FSC

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <a href="https://www.facebook.com/CaulacboChungKhoanSeSC" class="hero-btn">Visit us to know more</a>
   </div>
 </section>
-<!--------Next Section-------------------------->
+<!--------Next Section----------------->
 <section class ="training">
   <h1>Our training sessions</h1>
   <p>Internal training</p>
@@ -53,6 +53,32 @@
   </div>
 
 </section>
+<!--------Next Section--------------->
+<section class="FSC">
+  <h1>Financial Student Contest</h1>
+  <p>Financial Student Contest is organized annually by SeSC Finance - Securities Club with the goal of bringing together students with igniting passion for Finance from all over the country to compete with each other to find the ultimate champions</p>
+  <div class="col">
+    <div class="FSC-col">
+      <img src="SeSC/FSC2020.jpg">
+      <div class="layer">
+        <h3>FSC 8</h3>
+      </div>
+    </div>
+    <div class="FSC-col">
+      <img src="SeSC/FSC2021.jpg">
+      <div class="layer">
+        <h3>FSC 9</h3>
+      </div>
+    </div>
+    <div class="FSC-col">
+      <img src="SeSC/FSC2022.jpg">
+      <div class="layer">
+        <h3>FSC 10</h3>
+      </div>
+    </div>
+  </div>
+</section>
+
 <!--------Javacrpt for Toggle Mobile Menu------->
   <script>
     var navLinks = document.getElementById("navLinks")
