--- a/index.html
+++ b/index.html
@@ -78,7 +78,33 @@
     </div>
   </div>
 </section>
-
+<!--------Next Section--------------->
+<section class="department">
+  <h1>Our departments</h1>
+  <p>Working in perfect sync with each other</p>
+  <div class="row">
+    <div class="department-col">
+      <img src="SeSC/BCM.jpg">
+      <h3>Research and Development</h3>
+    </div>
+    <div class="department-col">
+      <img src="SeSC/TCSK.jpg">
+      <h3>Event</h3>
+    </div>
+    <div class="department-col">
+      <img src="SeSC/BTT.jpg">
+      <h3>Media</h3>
+    </div>
+    <div class="department-col">
+      <img src="SeSC/BĐN.jpg">
+      <h3>External Relation</h3>
+    </div>
+    <div class="department-col">
+      <img src="SeSC/BNS.jpg">
+      <h3>Human Resource</h3>
+    </div>
+  </div>
+</section>
 <!--------Javacrpt for Toggle Mobile Menu------->
   <script>
     var navLinks = document.getElementById("navLinks")
