--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
 <section class ="training">
   <h1>Our training sessions</h1>
   <p>Internal training</p>
-
   <div class="row">
     <div class="training-col">
       <h3>Finance</h3>
@@ -48,10 +47,8 @@
     <div class="training-col">
       <h3>Career Orientation</h3>
       <p>Sharing about different fields in the financial industry including securities analyst, financial consultant, audit, etc. from former club memebers.</p>
-    </div>
-    
+    </div>   
   </div>
-
 </section>
 <!--------Next Section--------------->
 <section class="FSC">
@@ -105,6 +102,12 @@
     </div>
   </div>
 </section>
+<!--------Next Section--------------->
+<section class="cta">
+  <h1>Come find us for more!</h1>
+  <a href="https://www.facebook.com/CaulacboChungKhoanSeSC" class="hero-btn">CONTACT</a>
+</section>
+
 <!--------Javacrpt for Toggle Mobile Menu------->
   <script>
     var navLinks = document.getElementById("navLinks")
