added footer to our website

--- a/index.html
+++ b/index.html
@@ -107,7 +107,17 @@
   <h1>Come find us for more!</h1>
   <a href="https://www.facebook.com/CaulacboChungKhoanSeSC" class="hero-btn">CONTACT</a>
 </section>
-
+<!--------Next Section--------------->
+<section class="footer">
+  <h4>About Us</h4>
+  <p>Established on April 1, 2010, SeSC (Securities Studying Club) is currently the only club at FTU2 operating in the field of finance and securities.<br> This is an environment for students with the same passion to learn and share knowledge with each other.</p>
+  <div class="icons">
+    <ion-icon class="fa" name="logo-facebook"></ion-icon>
+    <ion-icon class="fa" name="logo-linkedin"></ion-icon>
+    <ion-icon class="fa" name="logo-tiktok"></ion-icon>
+  </div>
+  <p>Powered by  <ion-icon class="fa" name="heart-outline"></ion-icon>  from SeSC</p>
+</section>
 <!--------Javacrpt for Toggle Mobile Menu------->
   <script>
     var navLinks = document.getElementById("navLinks")
