--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <!--------Next Section--------------->
 <section class="FSC">
   <h1>Financial Student Contest</h1>
-  <p>Financial Student Contest is organized annually by SeSC Finance - Securities Club with the goal of bringing together students with igniting passion for Finance from all over the country to compete with each other to find the ultimate champions</p>
+  <p>Financial Student Contest is organized annually by SeSC Finance - Securities Club with the goal of bringing together students with igniting passion for Finance<br> from all over the country to compete with each other to find the ultimate champions</p>
   <div class="col">
     <div class="FSC-col">
       <img src="SeSC/FSC2020.jpg">
