Added about page
Added page and fixed some minor issues

--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 <body>
 <section class ="header">
   <nav>
-    <a href="https://www.facebook.com/CaulacboChungKhoanSeSC"><img src="SeSC/Logo_small_trans.png"></a>
+    <a href="https://www.facebook.com/CaulacboChungKhoanSeSC"><img src="SeSC/Logo_small_trans.png" target="_blank"></a>
     <div class="nav-links" id="navLinks">
       <ion-icon class="fa fa-times" name="close-outline" onclick="hideMenu()"></ion-icon>
         <ul>
-          <li><a href="#">HOME</a></li>
-          <li><a href="#">ABOUT US</a></li>
+          <li><a href="index.html">HOME</a></li>
+          <li><a href="about.html">ABOUT US</a></li>
           <li><a href="#">FSC</a></li>
           <li><a href="#">BLOG</a></li>
           <li><a href="#">TOOLS</a></li>
@@ -28,7 +28,7 @@
   <div class="text-box">
     <h1>Securities Studying Club</h1>
     <p>Knowing how to invest has become so important now than ever before to reach financial independence and more importantly,<br> to be able to not lose what you have worked so hard for.</p>
-    <a href="https://www.facebook.com/CaulacboChungKhoanSeSC" class="hero-btn">Visit us to know more</a>
+    <a href="https://www.facebook.com/CaulacboChungKhoanSeSC" class="hero-btn" target="_blank">Visit us to know more</a>
   </div>
 </section>
 <!--------Next Section----------------->
@@ -105,16 +105,16 @@
 <!--------Next Section--------------->
 <section class="cta">
   <h1>Come find us for more!</h1>
-  <a href="https://www.facebook.com/CaulacboChungKhoanSeSC" class="hero-btn">CONTACT</a>
+  <a href="https://www.facebook.com/CaulacboChungKhoanSeSC" class="hero-btn" target="_blank">CONTACT</a>
 </section>
 <!--------Next Section--------------->
 <section class="footer">
   <h4>About Us</h4>
   <p>Established on April 1, 2010, SeSC (Securities Studying Club) is currently the only club at FTU2 operating in the field of finance and securities.<br> This is an environment for students with the same passion to learn and share knowledge with each other.</p>
   <div class="icons">
-    <ion-icon class="fa" name="logo-facebook"></ion-icon>
-    <ion-icon class="fa" name="logo-linkedin"></ion-icon>
-    <ion-icon class="fa" name="logo-tiktok"></ion-icon>
+    <a href="https://www.facebook.com/CaulacboChungKhoanSeSC" target="_blank"><ion-icon class="fa" name="logo-facebook"></ion-icon></a>
+    <a href="https://www.linkedin.com/company/sesc-ftu2/mycompany/" target="_blank"><ion-icon class="fa" name="logo-linkedin"></ion-icon></a>
+    <a href="https://www.tiktok.com/@fsc.10" target="_blank"><ion-icon class="fa" name="logo-tiktok"></ion-icon></a></ion-icon>
   </div>
   <p>Powered by  <ion-icon class="fa" name="heart-outline"></ion-icon>  from SeSC</p>
 </section>
