added FSC page (unfinished)

--- a/fsc.html
+++ b/fsc.html
@@ -9,7 +9,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
-<section class ="header">
+<!--------Header----------------->
+<section class ="sub-header">
   <nav>
     <a href="https://www.facebook.com/CaulacboChungKhoanSeSC"><img src="SeSC/Logo_small_trans.png" target="_blank"></a>
     <div class="nav-links" id="navLinks">
@@ -26,31 +27,9 @@
     <ion-icon class="fa fa-bars" name="menu-outline" onclick="showMenu()"></ion-icon>
   </nav>
   <div class="text-box">
-    <h1>Securities Studying Club</h1>
-    <p>Knowing how to invest has become so important now than ever before to reach financial independence and more importantly,<br> to be able to not lose what you have worked so hard for.</p>
-    <a href="https://www.facebook.com/CaulacboChungKhoanSeSC" class="hero-btn" target="_blank">Visit us to know more</a>
-  </div>
+    <h1>Financial Student Contest</h1>
 </section>
-<!--------Next Section----------------->
-<section class ="training">
-  <h1>Our training sessions</h1>
-  <p>Internal training</p>
-  <div class="row">
-    <div class="training-col">
-      <h3>Finance</h3>
-      <p>Provide knowledge about the Financial industry, focusing on building a critical and open mindset for trainees.</p>
-    </div>
-    <div class="training-col">
-      <h3>Security</h3>
-      <p>Basic view over the stock market, how to read and interpret charts and various indicators. These training sessions also ensures the understanding of various types of assets.</p>
-    </div>
-    <div class="training-col">
-      <h3>Career Orientation</h3>
-      <p>Sharing about different fields in the financial industry including securities analyst, financial consultant, audit, etc. from former club memebers.</p>
-    </div>   
-  </div>
-</section>
-<!--------Next Section--------------->
+<!--------FSC----------------->
 <section class="FSC">
   <h1>Financial Student Contest</h1>
   <p>Financial Student Contest is organized annually by SeSC Finance - Securities Club with the goal of bringing together students with igniting passion for Finance<br> from all over the country to compete with each other to find the ultimate champions</p>
@@ -75,39 +54,7 @@
     </div>
   </div>
 </section>
-<!--------Next Section--------------->
-<section class="department">
-  <h1>Our departments</h1>
-  <p>Working in perfect sync with each other</p>
-  <div class="row">
-    <div class="department-col">
-      <img src="SeSC/BCM.jpg">
-      <h3>Research and Development</h3>
-    </div>
-    <div class="department-col">
-      <img src="SeSC/TCSK.jpg">
-      <h3>Event</h3>
-    </div>
-    <div class="department-col">
-      <img src="SeSC/BTT.jpg">
-      <h3>Media</h3>
-    </div>
-    <div class="department-col">
-      <img src="SeSC/BĐN.jpg">
-      <h3>External Relation</h3>
-    </div>
-    <div class="department-col">
-      <img src="SeSC/BNS.jpg">
-      <h3>Human Resource</h3>
-    </div>
-  </div>
-</section>
-<!--------Next Section--------------->
-<section class="cta">
-  <h1>Come find us for more!</h1>
-  <a href="https://www.facebook.com/CaulacboChungKhoanSeSC" class="hero-btn" target="_blank">CONTACT</a>
-</section>
-<!--------Next Section--------------->
+<!--------Footer--------------->
 <section class="footer">
   <h4>About Us</h4>
   <p>Established on April 1, 2010, SeSC (Securities Studying Club) is currently the only club at FTU2 operating in the field of finance and securities.<br> This is an environment for students with the same passion to learn and share knowledge with each other.</p>
@@ -132,5 +79,47 @@
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
