--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
         <ul>
           <li><a href="index.html">HOME</a></li>
           <li><a href="about.html">ABOUT US</a></li>
-          <li><a href="#">FSC</a></li>
+          <li><a href="fsc.html">FSC</a></li>
           <li><a href="#">BLOG</a></li>
           <li><a href="#">TOOLS</a></li>
           <li><a href="#">CONTACT</a></li>
@@ -40,9 +40,7 @@
     <div class="about-col">
       <img src="SeSC/TBD.jpg">
     </div>
-
   </div>
-
 </section>
 <!--------Footer--------------->
 <section class="footer">
