added Blog page (unfinished)

--- a/fsc.html
+++ b/fsc.html
@@ -19,7 +19,7 @@
           <li><a href="index.html">HOME</a></li>
           <li><a href="about.html">ABOUT US</a></li>
           <li><a href="fsc.html">FSC</a></li>
-          <li><a href="#">BLOG</a></li>
+          <li><a href="blog.html">BLOG</a></li>
           <li><a href="#">TOOLS</a></li>
           <li><a href="#">CONTACT</a></li>
         </ul>
@@ -29,7 +29,7 @@
   <div class="text-box">
     <h1>Financial Student Contest</h1>
 </section>
-<!--------FSC----------------->
+<!--------Introduction----------------->
 <section class="FSC">
   <h1>Financial Student Contest</h1>
   <p>Financial Student Contest is organized annually by SeSC Finance - Securities Club with the goal of bringing together students with igniting passion for Finance<br> from all over the country to compete with each other to find the ultimate champions</p>
@@ -52,7 +52,6 @@
         <h3>FSC 10</h3>
       </div>
     </div>
-  </div>
 </section>
 <!--------Footer--------------->
 <section class="footer">
