--- a/blog.html
+++ b/blog.html
@@ -27,19 +27,12 @@
     <ion-icon class="fa fa-bars" name="menu-outline" onclick="showMenu()"></ion-icon>
   </nav>
   <div class="text-box">
-    <h1>About Us</h1>
+    <h1>Analytics, Latest News and other Financial Materials</h1>
 </section>
 <!--------Introduction----------------->
-<section class="about-us">
-  <div class="row">
-    <div class="about-col">
-      <h1>Abstract</h1>
-      <p>We investigate the equity market timing hypothesis of capital structure in the case of Vietnam. The two questions that we aim to answer in this paper are: Whether or not Vietnamese listed non-financial firms’ capital structures are affected by equity market timing? If they are indeed affected, does the effect last throughout the years, or is it only a short-term effect? The results suggest that capital structure is the cumulative outcomes of past market timing attempts for Vietnamese non-financial firms. Our findings are consistent with the theory proposed by Baker & Wurgler (2002), the pioneering research whose model have been widely adopted in numerous studies around the world in this field.</p>
-      <a href="https://www.facebook.com/CaulacboChungKhoanSeSC" class="hero-btn green-btn" target="_blank">Explore now</a>
-    </div>
-    <div class="about-col">
-      <img src="SeSC/TBD.jpg">
-    </div>
+<section class="">
+  <div class="">
+    
   </div>
 </section>
 <!--------Footer--------------->
@@ -67,5 +60,48 @@
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
