--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <li><a href="index.html">HOME</a></li>
           <li><a href="about.html">ABOUT US</a></li>
           <li><a href="fsc.html">FSC</a></li>
-          <li><a href="#">BLOG</a></li>
+          <li><a href="blog.html">BLOG</a></li>
           <li><a href="#">TOOLS</a></li>
           <li><a href="#">CONTACT</a></li>
         </ul>
