--- a/fsc.html
+++ b/fsc.html
@@ -35,9 +35,9 @@
   <p>Financial Student Contest is organized annually by SeSC Finance - Securities Club with the goal of bringing together students with igniting passion for Finance<br> from all over the country to compete with each other to find the ultimate champions</p>
   <div class="col">
     <div class="FSC-col">
-      <img src="SeSC/FSC2020.jpg">
+      <img src="SeSC/FSC2022.jpg">
       <div class="layer">
-        <h3>FSC 8</h3>
+        <h3>FSC 10</h3>
       </div>
     </div>
     <div class="FSC-col">
@@ -47,11 +47,30 @@
       </div>
     </div>
     <div class="FSC-col">
-      <img src="SeSC/FSC2022.jpg">
+      <img src="SeSC/FSC2020.jpg">
       <div class="layer">
-        <h3>FSC 10</h3>
+        <h3>FSC 8</h3>
       </div>
     </div>
+    <div class="FSC-col">
+      <img src="SeSC/FSC2019.jpg">
+      <div class="layer">
+        <h3>FSC 7</h3>
+      </div>
+    </div>
+    <div class="FSC-col">
+      <img src="SeSC/FSC2018.jpg">
+      <div class="layer">
+        <h3>FSC 6</h3>
+      </div>
+    </div>
+    <div class="FSC-col">
+      <img src="SeSC/FSC2017.jpg">
+      <div class="layer">
+        <h3>FSC 5</h3>
+      </div>
+    </div>
+  </div>
 </section>
 <!--------Footer--------------->
 <section class="footer">
