--- a/blog.html
+++ b/blog.html
@@ -27,20 +27,68 @@
     <ion-icon class="fa fa-bars" name="menu-outline" onclick="showMenu()"></ion-icon>
   </nav>
   <div class="text-box">
-    <h1>Analytics, Latest News and other Financial Materials</h1>
+    <h1>Analytics & Reports</h1>
 </section>
-<!--------Introduction----------------->
-<section class="about-us">
+<!--------Blog----------------->
+<section class="blog-content">
   <div class="row">
-    <div class="about-col">
-      <h1>Abstract</h1>
+    <div class="blog-left">
+      <img src="SeSC/Finance-1.jpg">
+      <h2>Analytics & Reports</h2>
       <p>We investigate the equity market timing hypothesis of capital structure in the case of Vietnam. The two questions that we aim to answer in this paper are: Whether or not Vietnamese listed non-financial firms’ capital structures are affected by equity market timing? If they are indeed affected, does the effect last throughout the years, or is it only a short-term effect? The results suggest that capital structure is the cumulative outcomes of past market timing attempts for Vietnamese non-financial firms. Our findings are consistent with the theory proposed by Baker & Wurgler (2002), the pioneering research whose model have been widely adopted in numerous studies around the world in this field.</p>
-      <a href="https://www.facebook.com/CaulacboChungKhoanSeSC" class="hero-btn green-btn" target="_blank">Explore now</a>
+      <br>
+      <p>We investigate the equity market timing hypothesis of capital structure in the case of Vietnam. The two questions that we aim to answer in this paper are: Whether or not Vietnamese listed non-financial firms’ capital structures are affected by equity market timing? If they are indeed affected, does the effect last throughout the years, or is it only a short-term effect? The results suggest that capital structure is the cumulative outcomes of past market timing attempts for Vietnamese non-financial firms. Our findings are consistent with the theory proposed by Baker & Wurgler (2002), the pioneering research whose model have been widely adopted in numerous studies around the world in this field.</p>
+      <br>
+      <p>We investigate the equity market timing hypothesis of capital structure in the case of Vietnam. The two questions that we aim to answer in this paper are: Whether or not Vietnamese listed non-financial firms’ capital structures are affected by equity market timing? If they are indeed affected, does the effect last throughout the years, or is it only a short-term effect? The results suggest that capital structure is the cumulative outcomes of past market timing attempts for Vietnamese non-financial firms. Our findings are consistent with the theory proposed by Baker & Wurgler (2002), the pioneering research whose model have been widely adopted in numerous studies around the world in this field.</p>
+      <br>
+      <p>We investigate the equity market timing hypothesis of capital structure in the case of Vietnam. The two questions that we aim to answer in this paper are: Whether or not Vietnamese listed non-financial firms’ capital structures are affected by equity market timing?</p>
+      <div class="comment-box">
+        <h3>Leave a comment</h3>
+        <form class="comment-form" action="">
+          <input type="name" placeholder="Enter Name">
+          <input type="email" placeholder="Enter Email">
+          <textarea rows="5" placeholder="Your comment"></textarea>
+          <button type="submit" class="hero-btn green-btn">POST COMMENT</button>
+        </form>
+      </div>
     </div>
-    <div class="about-col">
-      <img src="SeSC/TNS.png">
+    <div class="blog-right">
+      <h3>Categories</h3>
+      <div>
+        <span>Industry Analytics</span>
+        <span>17</span>
+      </div>
+      <div>
+        <span>Weekly Feeds</span>
+        <span>109</span>
+      </div>
+      <div>
+        <span>Analyst Reports</span>
+        <span>21</span>
+      </div>
+      <div>
+        <span>Financial Facts</span>
+        <span>32</span>
+      </div>
+      <div>
+        <span>Learning materials</span>
+        <span>67</span>
+      </div>
+      <div>
+        <span>Career Orientations</span>
+        <span>7</span>
+      </div>
     </div>
   </div>
+
+
+
+
+
+
+
+
+
 </section>
 <!--------Footer--------------->
 <section class="footer">
