--- a/blog.html
+++ b/blog.html
@@ -20,7 +20,7 @@
 <!--------Header----------------->
 <section class ="sub-header">
   <nav>
-    <a href="https://www.facebook.com/CaulacboChungKhoanSeSC"><img src="SeSC/Logo_small_trans.png" target="_blank"></a>
+    <a href="index.html"><img src="SeSC/Logo_small_trans.png" target="_blank"></a>
     <div class="nav-links" id="navLinks">
       <ion-icon class="fa fa-times" name="close-outline" onclick="hideMenu()"></ion-icon>
         <ul>
@@ -103,12 +103,8 @@
 <!--------Javacrpt for Toggle Mobile Menu------->
   <script>
     var navLinks = document.getElementById("navLinks")
-    function showMenu(){
-      navLinks.style.right="0";
-    }
-    function hideMenu(){
-      navLinks.style.right="-200px";
-    }
+    function showMenu(){navLinks.style.right="0";}
+    function hideMenu(){navLinks.style.right="-200px";}
   </script>
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
