--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Securities Studying Club - Never Back Down</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="theme.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;600;700&display=swap" rel="stylesheet">
@@ -19,17 +20,18 @@
 <body>
 <section class ="header">
   <nav>
-    <a href="https://www.facebook.com/CaulacboChungKhoanSeSC"><img src="SeSC/Logo_small_trans.png" target="_blank"></a>
+    <a href="index.html"><img src="SeSC/Logo_small_trans.png" target="_blank"></a>
     <div class="nav-links" id="navLinks">
       <ion-icon class="fa fa-times" name="close-outline" onclick="hideMenu()"></ion-icon>
         <ul>
-          <li><a href="index.html">HOME</a></li>
-          <li><a href="about.html">ABOUT US</a></li>
-          <li><a href="fsc.html">FSC</a></li>
-          <li><a href="blog.html">BLOG</a></li>
-          <!---<li><a href="#">TOOLS</a></li>--->
-          <li><a href="contact.html">CONTACT</a></li>
-        </ul>
+          <li class="nav"><a href="index.html">HOME</a></li>
+          <li class="nav"><a href="about.html">ABOUT US</a></li>
+          <li class="nav"><a href="fsc.html">FSC</a></li>
+          <li class="nav"><a href="blog.html">BLOG</a></li>
+          <!---<li class="nav"><a href="#">TOOLS</a></li>--->
+          <li class="nav"><a href="contact.html">CONTACT</a></li>   
+          <li class="dark-theme"><img src="SeSC/dark theme icon/moon.png" id="dark-theme"></li>
+        </ul>       
     </div>
     <ion-icon class="fa fa-bars" name="menu-outline" onclick="showMenu()"></ion-icon>
   </nav>
@@ -129,12 +131,8 @@
 <!--------Javacrpt for Toggle Mobile Menu------->
   <script>
     var navLinks = document.getElementById("navLinks")
-    function showMenu(){
-      navLinks.style.right="0";
-    }
-    function hideMenu(){
-      navLinks.style.right="-200px";
-    }
+    function showMenu(){navLinks.style.right="0";}
+    function hideMenu(){navLinks.style.right="-200px";}
   </script>
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
