--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Securities Studying Club - Never Back Down</title>
   <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="theme.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;600;700&display=swap" rel="stylesheet">
@@ -18,6 +17,9 @@
   </script>
 </head>
 <body>
+<div id="preloader">
+  
+</div>
 <section class ="header">
   <nav>
     <a href="index.html"><img src="SeSC/Logo_small_trans.png" target="_blank"></a>
@@ -136,6 +138,12 @@
   </script>
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+  <script>
+    var loader = document.getElementById("preloader");
+    window.addEventListener("load", function(){
+      loader.style.display = "none"
+    });
+  </script>
 </body>
 </html>
 
