--- a/blog.html
+++ b/blog.html
@@ -17,6 +17,7 @@
   </script>
 </head>
 <body>
+<div id="preloader"></div>
 <!--------Header----------------->
 <section class ="sub-header">
   <nav>
@@ -108,6 +109,15 @@
   </script>
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+  <script>
+    window.addEventListener("load", function(){
+    setInterval(pippo, 2000)});
+    function pippo(){
+      var preloader = document.getElementById("preloader");
+      document.body.removeChild(preloader);
+    }
+  </script>
+</body>
 </body>
 </html>
 
