--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
   </script>
 </head>
 <body>
-<div id="preloader">
-  
-</div>
+<div id="preloader"></div>
 <section class ="header">
   <nav>
     <a href="index.html"><img src="SeSC/Logo_small_trans.png" target="_blank"></a>
@@ -139,10 +137,12 @@
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
   <script>
-    var loader = document.getElementById("preloader");
     window.addEventListener("load", function(){
-      loader.style.display = "none"
-    });
+    setInterval(pippo, 2000)});
+    function pippo(){
+      var preloader = document.getElementById("preloader");
+      document.body.removeChild(preloader);
+    }
   </script>
 </body>
 </html>
