--- a/contact.html
+++ b/contact.html
@@ -68,11 +68,11 @@
       </div>
     </div>
     <div class="contact-col">
-      <form action="form-handler.php" method="post">
-        <input name="name" type="text" placeholder="Enter your name" required>
-        <input name="email" type="email" placeholder="Enter your email address" required>
-        <input name="subject" type="text" placeholder="Enter your subject" required>
-        <textarea name="message" rows="8" placeholder="Message" required></textarea>
+      <form>
+        <input id="name" name="name" type="text" placeholder="Enter your name" required>
+        <input id="email" name="email" type="email" placeholder="Enter your email address" required>
+        <input id="subject" name="subject" type="text" placeholder="Enter your subject" required>
+        <textarea id="message" name="message" rows="8" placeholder="Message" required></textarea>
         <button type="submit" class="hero-btn green-btn">Send Message</button>
       </form>
     </div>
