--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="nav-links" id="navLinks">
       <ion-icon class="fa fa-times" name="close-outline" onclick="hideMenu()"></ion-icon>
         <ul>
-          <li class="nav"><a href="index.html">HOME</a></li>
+          <li class="nav"><a href="index.html">HOMES</a></li>
           <li class="nav"><a href="about.html">ABOUT US</a></li>
           <li class="nav"><a href="fsc.html">FSC</a></li>
           <li class="nav"><a href="blog.html">BLOG</a></li>
