--- a/html/fsc/fsc.html
+++ b/html/fsc/fsc.html
@@ -3,10 +3,16 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Securities Studying Club - Never Back Down</title>
-  <link rel="stylesheet" href="style/style.css">
+  
+  <!-- gg fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;600;700&display=swap" rel="stylesheet">
+
+  <!-- css files -->
+  <link rel="stylesheet" href="/style/home/style.css">
+  <link rel="stylesheet" href="/style/fsc/style_fsc.css">
+
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-XE0JP45WDF"></script>
   <script>
@@ -21,17 +27,17 @@
 <!--------Header----------------->
 <section class ="sub-header">
   <nav>
-    <a href="index.html"><img src="SeSC/Logo_small_trans.png" target="_blank"></a>
+    <a href="index.html"><img src="/SeSC/Logo_small_trans.png" target="_blank"></a>
     <div class="nav-links" id="navLinks">
       <ion-icon class="fa fa-times" name="close-outline" onclick="hideMenu()"></ion-icon>
-        <ul>
-          <li><a href="index.html">HOME</a></li>
-          <li><a href="about.html">ABOUT US</a></li>
-          <li><a href="fsc.html">FSC</a></li>
-          <li><a href="blog.html">BLOG</a></li>
-          <!---<li><a href="#">TOOLS</a></li>--->
-          <li><a href="contact.html">CONTACT</a></li>
-        </ul>
+      <ul>
+        <li class="nav"><a href="/html/home/index.html">HOME</a></li>
+        <li class="nav"><a href="/html/aboutUs/about.html">ABOUT US</a></li>
+        <li class="nav"><a href="/html/fsc/fsc.html">FSC</a></li>
+        <li class="nav"><a href="/html/blog/blog.html">BLOG</a></li>
+        <li class="nav"><a href="/html/recruitment/recruitment.html">RECRUITMENT</a></li> 
+        <li class="nav"><a href="/html/contact/contact.html">CONTACT</a></li>   
+      </ul>   
     </div>
     <ion-icon class="fa fa-bars" name="menu-outline" onclick="showMenu()"></ion-icon>
   </nav>
@@ -44,37 +50,37 @@
   <p>Financial Student Contest is organized annually by SeSC Finance - Securities Club with the goal of bringing together students with igniting passion for Finance<br> from all over the country to compete with each other to find the ultimate champions</p>
   <div class="col">
     <div class="FSC-col">
-      <img src="SeSC/FSC2022.jpg">
+      <img src="/SeSC/FSC2022.jpg">
       <div class="layer">
         <h3>FSC 10</h3>
       </div>
     </div>
     <div class="FSC-col">
-      <img src="SeSC/FSC2021.jpg">
+      <img src="/SeSC/FSC2021.jpg">
       <div class="layer">
         <h3>FSC 9</h3>
       </div>
     </div>
     <div class="FSC-col">
-      <img src="SeSC/FSC2020.jpg">
+      <img src="/SeSC/FSC2020.jpg">
       <div class="layer">
         <h3>FSC 8</h3>
       </div>
     </div>
     <div class="FSC-col">
-      <img src="SeSC/FSC2019.jpg">
+      <img src="/SeSC/FSC2019.jpg">
       <div class="layer">
         <h3>FSC 7</h3>
       </div>
     </div>
     <div class="FSC-col">
-      <img src="SeSC/FSC2018.jpg">
+      <img src="/SeSC/FSC2018.jpg">
       <div class="layer">
         <h3>FSC 6</h3>
       </div>
     </div>
     <div class="FSC-col">
-      <img src="SeSC/FSC2017.jpg">
+      <img src="/SeSC/FSC2017.jpg">
       <div class="layer">
         <h3>FSC 5</h3>
       </div>
