--- a/html/aboutUs/about.html
+++ b/html/aboutUs/about.html
@@ -3,10 +3,16 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Securities Studying Club - Never Back Down</title>
-  <link rel="stylesheet" href="style/style.css">
+
+  <!-- gg fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;600;700&display=swap" rel="stylesheet">
+
+  <!-- css files -->
+  <link rel="stylesheet" href="/style/home/style.css">
+  <link rel="stylesheet" href="/style/about/style_about.css">
+
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-XE0JP45WDF"></script>
   <script>
@@ -21,60 +27,33 @@
 <!--------Header----------------->
 <section class ="sub-header">
   <nav>
-    <a href="index.html"><img src="SeSC/Logo_small_trans.png" target="_blank"></a>
+    <a href="/html/home/index.html"><img src="/SeSC/Logo_small_trans.png" target="_blank"></a>
     <div class="nav-links" id="navLinks">
       <ion-icon class="fa fa-times" name="close-outline" onclick="hideMenu()"></ion-icon>
-        <ul>
-          <li><a href="index.html">HOME</a></li>
-          <li><a href="about.html">ABOUT US</a></li>
-          <li><a href="fsc.html">FSC</a></li>
-          <li><a href="blog.html">BLOG</a></li>
-          <!---<li><a href="#">TOOLS</a></li>--->
-          <li><a href="contact.html">CONTACT</a></li>
-        </ul>
+      <ul>
+        <li class="nav"><a href="/html/home/index.html">HOME</a></li>
+        <li class="nav"><a href="/html/aboutUs/about.html">ABOUT US</a></li>
+        <li class="nav"><a href="/html/fsc/fsc.html">FSC</a></li>
+        <li class="nav"><a href="/html/blog/blog.html">BLOG</a></li>
+        <li class="nav"><a href="/html/recruitment/recruitment.html">RECRUITMENT</a></li> 
+        <li class="nav"><a href="/html/contact/contact.html">CONTACT</a></li>   
+      </ul>      
     </div>
     <ion-icon class="fa fa-bars" name="menu-outline" onclick="showMenu()"></ion-icon>
-  </nav>
+  </nav> 
   <div class="text-box">
-    <h1>Contact Us</h1>
+    <h1>About Us</h1>
 </section>
-<!--------contact us----------------->
-<section class="location">
-  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3919.057498651273!2d106.71086331411678!3d10.8069082615871!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x317528a33d45ec4b%3A0xbc43c25806fdd0b9!2sForeign%20Trade%20University%20-%20Campus%20II%20in%20Ho%20Chi%20Minh%20City!5e0!3m2!1sen!2s!4v1650535884234!5m2!1sen!2s" width="500" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-</section>
-<section class="contact-us">
+<!--------Introduction----------------->
+<section class="about-us">
   <div class="row">
-    <div class="contact-col">
-      <div>
-        <ion-icon name="home"></ion-icon>
-        <span>
-          <h5>15 D5 street, Ward 25</h5>
-          <p>Binh Thanh, Ho Chi Minh City, Vietnam</p>
-        </span>
-      </div>
-      <div>
-        <ion-icon name="call"></ion-icon>
-        <span>
-          <h5>+84 911408383</h5>
-          <p>Monday to Saturday, 7AM to 6PM</p>
-        </span>
-      </div>
-      <div>
-        <ion-icon name="mail"></ion-icon>
-        <span>
-          <h5>info.sesc@gmail.com</h5>
-          <p>Email us your query</p>
-        </span>
-      </div>
+    <div class="about-col">
+      <h1>Abstract</h1>
+      <p>We investigate the equity market timing hypothesis of capital structure in the case of Vietnam. The two questions that we aim to answer in this paper are: Whether or not Vietnamese listed non-financial firms’ capital structures are affected by equity market timing? If they are indeed affected, does the effect last throughout the years, or is it only a short-term effect? The results suggest that capital structure is the cumulative outcomes of past market timing attempts for Vietnamese non-financial firms. Our findings are consistent with the theory proposed by Baker & Wurgler (2002), the pioneering research whose model have been widely adopted in numerous studies around the world in this field.</p>
+      <a href="https://www.facebook.com/CaulacboChungKhoanSeSC" class="hero-btn green-btn" target="_blank">Explore now</a>
     </div>
-    <div class="contact-col">
-      <form>
-        <input id="name" name="name" type="text" placeholder="Enter your name" required>
-        <input id="email" name="email" type="email" placeholder="Enter your email address" required>
-        <input id="subject" name="subject" type="text" placeholder="Enter your subject" required>
-        <textarea id="message" name="message" rows="8" placeholder="Message" required></textarea>
-        <button type="submit" class="hero-btn green-btn">Send Message</button>
-      </form>
+    <div class="about-col">
+      <img src="/SeSC/TBD.jpg">
     </div>
   </div>
 </section>
@@ -89,8 +68,9 @@
   </div>
   <p>Powered by  <ion-icon class="fa" name="heart-outline"></ion-icon>  from SeSC</p>
 </section>
-<!--------Javacrpt------->
+<!--------Javacrpt for Toggle Mobile Menu------->
   <script>
+    var navLinks = document.getElementById("navLinks")
     function showMenu(){navLinks.style.right="0";}
     function hideMenu(){navLinks.style.right="-200px";}
   </script>
