--- a/html/home/index.html
+++ b/html/home/index.html
@@ -3,10 +3,15 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Securities Studying Club - Never Back Down</title>
-  <link rel="stylesheet" href="style/style.css">
+  
+  <!-- gg fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;600;700&display=swap" rel="stylesheet">
+
+  <!-- css files -->
+  <link rel="stylesheet" href="/style/home/style.css">
+
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-XE0JP45WDF"></script>
   <script>
@@ -20,17 +25,17 @@
 <div id="preloader"></div>
 <section class ="header">
   <nav>
-    <a href="index.html"><img src="SeSC/Logo_small_trans.png" target="_blank"></a>
+    <a href="index.html"><img src="/SeSC/Logo_small_trans.png" target="_blank"></a>
     <div class="nav-links" id="navLinks">
       <ion-icon class="fa fa-times" name="close-outline" onclick="hideMenu()"></ion-icon>
-        <ul>
-          <li class="nav"><a href="index.html">HOMES</a></li>
-          <li class="nav"><a href="about.html">ABOUT US</a></li>
-          <li class="nav"><a href="fsc.html">FSC</a></li>
-          <li class="nav"><a href="blog.html">BLOG</a></li>
-          <!---<li class="nav"><a href="#">TOOLS</a></li>--->
-          <li class="nav"><a href="contact.html">CONTACT</a></li>   
-        </ul>       
+      <ul>
+        <li class="nav"><a href="../home/index.html">HOME</a></li>
+        <li class="nav"><a href="../aboutUs/about.html">ABOUT US</a></li>
+        <li class="nav"><a href="../fsc/fsc.html">FSC</a></li>
+        <li class="nav"><a href="../blog/blog.html">BLOG</a></li>
+        <li class="nav"><a href="../recruitment/recruitment.html">RECRUITMENT</a></li> 
+        <li class="nav"><a href="../contact/contact.html">CONTACT</a></li>   
+      </ul>      
     </div>
     <ion-icon class="fa fa-bars" name="menu-outline" onclick="showMenu()"></ion-icon>
   </nav>
@@ -65,19 +70,19 @@
   <p>Financial Student Contest is organized annually by SeSC Finance - Securities Club with the goal of bringing together students with igniting passion for Finance<br> from all over the country to compete with each other to find the ultimate champions</p>
   <div class="col">
     <div class="FSC-col">
-      <img src="SeSC/FSC2022.jpg">
+      <img src="/SeSC/FSC2022.jpg">
       <div class="layer">
         <h3>FSC 10</h3>
       </div>
     </div>
     <div class="FSC-col">
-      <img src="SeSC/FSC2021.jpg">
+      <img src="/SeSC/FSC2021.jpg">
       <div class="layer">
         <h3>FSC 9</h3>
       </div>
     </div>
     <div class="FSC-col">
-      <img src="SeSC/FSC2020.jpg">
+      <img src="/SeSC/FSC2020.jpg">
       <div class="layer">
         <h3>FSC 8</h3>
       </div>
@@ -90,23 +95,23 @@
   <p>Working in perfect sync with each other</p>
   <div class="row">
     <div class="department-col">
-      <img src="SeSC/BCM.jpg">
+      <img src="/SeSC/BCM.jpg">
       <h3>Research and Development</h3>
     </div>
     <div class="department-col">
-      <img src="SeSC/TCSK.jpg">
+      <img src="/SeSC/TCSK.jpg">
       <h3>Event</h3>
     </div>
     <div class="department-col">
-      <img src="SeSC/BTT.jpg">
+      <img src="/SeSC/BTT.jpg">
       <h3>Media</h3>
     </div>
     <div class="department-col">
-      <img src="SeSC/BĐN.jpg">
+      <img src="/SeSC/BĐN.jpg">
       <h3>External Relation</h3>
     </div>
     <div class="department-col">
-      <img src="SeSC/BNS.jpg">
+      <img src="/SeSC/BNS.jpg">
       <h3>Human Resource</h3>
     </div>
   </div>
