--- a/html/recruitment/form-recruit.html
+++ b/html/recruitment/form-recruit.html
@@ -109,7 +109,225 @@
       </div>
     </section>
     <section class="form">
-        <div class="container"></div>
+        <div class="container">
+            <div class="thongTinCaNhan">
+                <h2>I) Thông Tin Cá Nhân</h2>
+                <div class="row">
+                    <div class="mb-3 col-6">
+                        <label for="hoTen" class="form-label">Họ và tên</label>
+                        <input type="text" class="form-control" id="hoTen" placeholder="Họ và Tên">
+                    </div>
+                    <div class="mb-3 col-6">
+                        <label for="ngaySinh" class="form-label">Ngày sinh</label>
+                        <input type="date" class="form-control" id="ngaySinh">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="mb-3 col-4">
+                        <label for="maSV" class="form-label">Mã SV</label>
+                        <input type="text" class="form-control" id="maSV" placeholder="Mã Sinh viên">
+                    </div>
+                    <div class="mb-3 col-4">
+                        <label for="lopSV" class="form-label">Lớp</label>
+                        <input type="text" class="form-control" id="lopSV">
+                    </div>
+                    <div class="mb-3 col-4">
+                        <label for="gioiTinh" class="form-label">Giới Tính</label>
+                        <div class="gioiTinh row">
+                            <div class="form-check col-4">
+                                <input class="form-check-input" type="radio" name="flexRadioDefault" id="nam">
+                                <label class="form-check-label" for="nam">
+                                  Nam
+                                </label>
+                            </div>
+                            <div class="form-check col-4">
+                                <input class="form-check-input" type="radio" name="flexRadioDefault" id="nữ" checked>
+                                <label class="form-check-label" for="nữ">
+                                  Nữ
+                                </label>
+                            </div>
+                            <div class="form-check col-4">
+                                <input class="form-check-input" type="radio" name="flexRadioDefault" id="lgbt+">
+                                <label class="form-check-label" for="lgbt+">
+                                  LGBT+
+                                </label>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="mb-3 col-4">
+                        <label for="sdt" class="form-label">Số điện thoại</label>
+                        <input type="text" class="form-control" id="sdt">
+                    </div>
+                    <div class="mb-3 col-4">
+                        <label for="email" class="form-label">Email</label>
+                        <input type="email" class="form-control" id="email">
+                    </div>
+                    <div class="mb-3 col-4">
+                        <label for="linkFb" class="form-label">Link Facebook</label>
+                        <input type="text" class="form-control" id="linkFb">
+                    </div>
+                </div>
+            </div>
+            <div class="cauHoiChung">
+                <h2>II) Câu Hỏi Chung</h2>
+                <div class="mb-3">
+                    <label for="cauHoi1" class="mb-3">1. Bạn biết gì về CLB Tài chính - Chứng khoán SeSC?</label>
+                    <textarea class="form-control" id="cauHoi1" style="height: 100px"></textarea>
+                </div>
+                <div class="mb-3">
+                    <label for="cauHoi2" class="mb-3">2. Bạn biết CLB Tài chính - Chứng khoán SeSC qua các kênh nào?</label>
+                    <textarea class="form-control" id="cauHoi2" style="height: 100px"></textarea>
+                </div>
+                <div class="mb-3">
+                    <label for="cauHoi3" class="mb-3">3. Điều gì khiến bạn nghĩ rằng mình phù hợp với SeSC?</label>
+                    <textarea class="form-control" id="cauHoi3" style="height: 100px"></textarea>
+                </div>
+                <div class="mb-3">
+                    <label for="cauHoi4" class="mb-3">4. Bạn có thể đóng góp những gì cho sự phát triển của SeSC?</label>
+                    <textarea class="form-control" id="cauHoi4" style="height: 100px"></textarea>
+                </div>
+                <div class="mb-3">
+                    <label for="cauHoi5" class="mb-3">5. Hãy nêu 3 điểm mạnh và 3 điểm yếu của bản thân. Bạn làm thế nào để khắc phục các điểm yếu đó.</label>
+                    <textarea class="form-control" id="cauHoi5" style="height: 100px"></textarea>
+                </div>
+                <div class="mb-3">
+                    <label for="cauHoi6" class="mb-3">6. Văn hóa gia đình là một điều không thể thiếu ở SeSC, bạn hiểu văn hóa gia đình là như thế nào và bản thân bạn dự định sẽ làm gì để phát triển văn hóa này?</label>
+                    <textarea class="form-control" id="cauHoi6" style="height: 100px"></textarea>
+                </div>
+                <div class="mb-3">
+                    <label for="cauHoi7" class="mb-3">7. Đã là con người thì ắt sẽ có những nỗi sợ. Trong thị trường chứng khoán, có 2 nỗi sợ thường được nhắc đến: FOMO (Fear Of Missing Out - Sợ bỏ lỡ cơ hội) và FOBO (Fear Of Better Options - Sợ sẽ có lựa chọn khác tốt hơn). Hãy thử liên tưởng và áp dụng cho trường hợp của riêng bản thân, bạn nghĩ mình dễ bị ảnh hưởng bởi nỗi sợ nào hơn trong cuộc sống và làm sao để khắc phục nó? (Nếu bạn đã đầu tư, thật tuyệt vời nếu cung cấp góc nhìn của bạn đối với thị trường chứng khoán).</label>
+                    <textarea class="form-control" id="cauHoi7" style="height: 100px"></textarea>
+                </div>
+            </div>
+            <div class="cauHoiPhanBan">
+                <h2>III) Câu Hỏi Phân Ban</h2>
+                <div class="row">
+                    <div class="col-6">
+                        <select class="form-select" aria-label="Default select example" id="select-nv1">
+                            <option selected>Nguyện Vọng 1</option>
+                            <option value="bcm">Ban Chuyên Môn</option>
+                            <option value="bdn">Ban Đối Ngoại</option>
+                            <option value="bns">Ban Nhân Sự</option>
+                            <option value="btt">Ban Truyền Thông</option>
+                            <option value="tcsk">Ban Tổ Chức Sự Kiện</option>
+                          </select>
+                        <div class="noti-error" id="noti-nguyenVong">
+                            <p>(*)Vui lòng chọn nguyện vọng 1</p>
+                        </div>
+                    </div>
+                    <div class="col-6">
+                        <select class="form-select" aria-label="Default select example" id="select-nv2">
+                            <option selected>Nguyện Vọng 2</option>
+                            <option value="bcm">Ban Chuyên Môn</option>
+                            <option value="bdn">Ban Đối Ngoại</option>
+                            <option value="bns">Ban Nhân Sự</option>
+                            <option value="btt">Ban Truyền Thông</option>
+                            <option value="tcsk">Ban Tổ Chức Sự Kiện</option>
+                          </select>
+                    </div>
+                </div>
+                <div class="tab-dpt">
+                    <!-- xóa flex-column để hiện hàng ngang -->
+                    <div class="nav nav-pills me-3 justify-content-center" role="tablist">
+                      <button
+                        class="nav-link border border-dark rounded text-dark mx-2 disabled"
+                        id="btn-bcm"
+                        data-bs-toggle="pill"
+                        data-bs-target="#v-pills-bcm"
+                      >
+                        Ban Chuyên Môn
+                      </button>
+                      <button
+                        class="nav-link border border-dark rounded text-dark mx-2 disabled"
+                        data-bs-toggle="pill"
+                        data-bs-target="#v-pills-bdn"
+                        id="btn-bdn"
+                      >
+                        Ban Đối Ngoại
+                      </button>
+                      <button
+                        class="nav-link border border-dark rounded text-dark mx-2 disabled"
+                        data-bs-toggle="pill"
+                        data-bs-target="#v-pills-bns"
+                        id="btn-bns"
+                      >
+                        Ban Nhân Sự
+                      </button>
+                      <button
+                        class="nav-link border border-dark rounded text-dark mx-2 disabled"
+                        data-bs-toggle="pill"
+                        data-bs-target="#v-pills-btt"
+                        id="btn-btt"
+                      >
+                        Ban Truyền Thông
+                      </button>
+                      <button
+                        class="nav-link border border-dark rounded text-dark mx-2 disabled"
+                        data-bs-toggle="pill"
+                        data-bs-target="#v-pills-tcsk"
+                        id="btn-tcsk"
+                      >
+                        Ban Tổ Chức Sự Kiện
+                      </button>
+                    </div>
+                    <!-- mỗi tab-pane phải cần có id để button trỏ tới nó; aria là các thuộc tính cho người khiếm thị; có thể xóa các thuộc tính như type, role -->
+                    <div class="tab-content" id="v-pills-tabContent">
+                      <div class="tab-pane fade" id="v-pills-bcm">
+                        <div class="mb-3">
+                            <label for="cauHoiBCM1" class="mb-3">1. Bạn nghĩ như thế nào về nhận định "Chứng khoán là cờ bạc".</label>
+                            <textarea class="form-control" id="cauHoiBCM1" style="height: 100px"></textarea>
+                        </div>
+                        <div class="mb-3">
+                            <label for="cauHoiBCM2" class="mb-3">2. Bạn nghĩ sao về câu nói “Bull markets are born on pessimism, grow on skepticism, mature on optimism and die on euphoria.” - John Templeton</label>
+                            <textarea class="form-control" id="cauHoiBCM2" style="height: 100px"></textarea>
+                        </div>
+                      </div>
+                      <div class="tab-pane fade" id="v-pills-bdn">
+                        <div class="mb-3">
+                            <label for="cauHoiBDN1" class="mb-3">1. Hãy cho biết những tố chất cần có để trở thành 1 thành viên của Ban Đối ngoại? Bạn làm gì để trau dồi các tố chất này?</label>
+                            <textarea class="form-control" id="cauHoiBDN1" style="height: 100px"></textarea>
+                        </div>
+                        <div class="mb-3">
+                            <label for="cauHoiBDN2" class="mb-3">2. Nếu toàn câu lạc bộ kỳ vọng Ban Đối ngoại phải tìm được 200 triệu tài trợ để lo cho các chi phí của chương trình nhưng Ban chỉ kiếm được 140 triệu thì bạn nghĩ Ban Đối ngoại nên giải quyết như thế nào?</label>
+                            <textarea class="form-control" id="cauHoiBDN2" style="height: 100px"></textarea>
+                        </div>
+                      </div>
+                      <div class="tab-pane fade" id="v-pills-bns">
+                        <div class="mb-3">
+                            <label for="cauHoiBNS1" class="mb-3">1. Bạn nghĩ bản thân có yếu tố nào phù hợp với Ban Nhân sự? Là thành viên Ban Nhân sự, bạn sẽ làm gì để những thành viên có tính cách trái ngược nhau làm việc hòa hợp với nhau?</label>
+                            <textarea class="form-control" id="cauHoiBNS1" style="height: 100px"></textarea>
+                        </div>
+                        <div class="mb-3">
+                            <label for="cauHoiBNS2" class="mb-3">2. Bạn nghĩ gì về quan điểm sau: “Nếu như câu lạc bộ của bạn là một chiếc xe, hãy mời những người thích hợp lên xe và những người không thích hợp xuống xe”</label>
+                            <textarea class="form-control" id="cauHoiBNS2" style="height: 100px"></textarea>
+                        </div>
+                      </div>
+                      <div class="tab-pane fade" id="v-pills-btt">
+                        <div class="mb-3">
+                            <label for="cauHoiBTT1" class="mb-3">1. Bạn có nhận xét gì về Bộ nhận diện của đợt tuyển nhân sự năm nay? Nếu được thay đổi, bạn sẽ chỉnh sửa những gì?</label>
+                            <textarea class="form-control" id="cauHoiBTT1" style="height: 100px"></textarea>
+                        </div>
+                        <div class="mb-3">
+                            <label for="cauHoiBTT2" class="mb-3">2. Bạn hãy chọn và trả lời 1 trong 2 câu hỏi sau: "Bạn hãy gửi 3 tấm hình tự chụp (hoặc tự design) mà bạn ưng ý nhất và viết content cho 3 tấm hình này" hoặc "Hãy sáng tạo 2 câu thành ngữ, tục ngữ về chủ đề chứng khoán (Ví dụ: Mua mã này, hô mã nọ)"</label>
+                            <textarea class="form-control" id="cauHoiBTT2" style="height: 100px"></textarea>
+                        </div>
+                      </div>
+                      <div class="tab-pane fade" id="v-pills-tcsk">
+                        <div class="mb-3">
+                            <label for="cauHoiTCSK1" class="mb-3">1. Theo bạn, Ban Tổ chức sự kiện sẽ thực hiện những công việc gì? Để làm tốt những công việc đó, bạn nghĩ Ban Tổ chức sự kiện sẽ gồm những thành viên có tính cách và tố chất như thế nào?</label>
+                            <textarea class="form-control" id="cauHoiTCSK1" style="height: 100px"></textarea>
+                        </div>
+                        <div class="mb-3">
+                            <label for="cauHoiTCSK2" class="mb-3">2. Giả sử bạn là thành viên ban Tổ chức sự kiện và bạn đang phải lên kế hoạch cho đêm Gala Night, theo bạn đâu sẽ những tiêu chí để khán giả đánh giá sự chuyên nghiệp của Ban Tổ chức?</label>
+                            <textarea class="form-control" id="cauHoiTCSK2" style="height: 100px"></textarea>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+            </div>
+        </div>
     </section>
     <footer class="footer">
       <div class="container">
@@ -164,6 +382,6 @@
     </script>
     
 
-    <script src="/script/recruit.js"></script>
+    <script src="/script/main/main_recruitForm.js"></script>
   </body>
 </html>
