thêm link điền form vào trang tuyển nhân sự

--- a/html/recruitment/recruitment.html
+++ b/html/recruitment/recruitment.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Title</title>
+    <title>TNS-SeSC</title>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta
@@ -123,7 +123,7 @@
               <span class="highlight-text">Out the Cycle, Up the Spiral.</span>
               Sự lựa chọn nằm ở em!
             </p>
-            <button type="button" class="btn btn-success">ĐĂNG KÝ NGAY</button>
+            <button type="button" class="btn btn-success"><a href="/html/recruitment/form-recruit.html" target="_blank">ĐĂNG KÝ NGAY</a></button>
           </div>
           <div class="col-12 col-md-6 right">
             <img src="/SeSC/sesc_quote.jpg" alt="SeSC Quote" />
@@ -434,9 +434,6 @@
                   </div>
                 </div>
               </div>
-              <button type="button" class="btn btn-success apply">
-                <a href="#" target="_blank">APPLY NGAY</a>
-              </button>
             </div>
             <div class="tab-pane fade" id="v-pills-bdn">
               <img src="/SeSC/BĐN.jpg" alt="Ban Đối Ngoại" />
@@ -561,9 +558,6 @@
                   </div>
                 </div>
               </div>
-              <button type="button" class="btn btn-success apply">
-                <a href="#" target="_blank">APPLY NGAY</a>
-              </button>
             </div>
             <div class="tab-pane fade" id="v-pills-bns">
               <img src="/SeSC/BNS.jpg" alt="Ban Nhân Sự" />
@@ -686,9 +680,6 @@
                   </div>
                 </div>
               </div>
-              <button type="button" class="btn btn-success apply">
-                <a href="#" target="_blank">APPLY NGAY</a>
-              </button>
             </div>
             <div class="tab-pane fade" id="v-pills-btt">
               <img src="/SeSC/BTT.jpg" alt="Ban Truyền Thông" />
@@ -814,9 +805,6 @@
                   </div>
                 </div>
               </div>
-              <button type="button" class="btn btn-success apply">
-                <a href="#" target="_blank">APPLY NGAY</a>
-              </button>
             </div>
             <div class="tab-pane fade" id="v-pills-tcsk">
               <img src="/SeSC/TCSK.jpg" alt="Ban TCSK" />
@@ -936,11 +924,11 @@
                   </div>
                 </div>
               </div>
-              <button type="button" class="btn btn-success apply">
-                <a href="#" target="_blank">APPLY NGAY</a>
-              </button>
             </div>
           </div>
+          <button type="button" class="btn btn-success apply">
+            <a href="/html/recruitment/form-recruit.html" target="_blank">APPLY NGAY</a>
+          </button>
         </div>
       </div>
     </section>
