Thêm nút Submit

--- a/html/recruitment/form-recruit.html
+++ b/html/recruitment/form-recruit.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Title</title>
+    <title>Form TNS-SeSC</title>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta
@@ -323,6 +323,11 @@
                             <label for="cauHoiTCSK2" class="mb-3">2. Giả sử bạn là thành viên ban Tổ chức sự kiện và bạn đang phải lên kế hoạch cho đêm Gala Night, theo bạn đâu sẽ những tiêu chí để khán giả đánh giá sự chuyên nghiệp của Ban Tổ chức?</label>
                             <textarea class="form-control" id="cauHoiTCSK2" style="height: 100px"></textarea>
                         </div>
+                      </div>
+                      <div class="btn-container text-center">
+                        <button type="button" class="btn btn-success submit">
+                          <a href="#" target="_blank">SUBMIT</a>
+                        </button>
                       </div>
                     </div>
                   </div>
