--- a/html/recruitment/recruitment.html
+++ b/html/recruitment/recruitment.html
@@ -236,8 +236,8 @@
     <section class="count-timer">
       <div class="container">
         <div class="heading">
-          <h2>Thời Hạn Điền Form Vòng 1 Còn Lại</h2>
-          <p>Form sẽ đóng vào lúc 23:59:59 ngày 07/11/2022</p>
+          <h2>Countdown To A</h2>
+          <p>Phải A</p>
         </div>
         <div class="clock">
           <div class="row">
