--- a/html/recruitment/form-recruit.html
+++ b/html/recruitment/form-recruit.html
@@ -34,6 +34,8 @@
       referrerpolicy="no-referrer"
     />
 
+    <link rel="shortcut icon" type="image/png" href="/SeSC/LogoSeSC.png"/>
+
     <!-- css files -->
     <link rel="stylesheet" href="/style/recruitment/style_form-recruit.css" />
   </head>
@@ -123,23 +125,23 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="mb-3 col-4">
+                    <div class="mb-3 col-sm-6 col-md-4">
                         <label for="maSV" class="form-label">Mã SV</label>
                         <input type="text" class="form-control" id="maSV" placeholder="Mã Sinh viên">
                         <div class="noti-error" id="noti-maSV">
                           <p></p>
                         </div>
                     </div>
-                    <div class="mb-3 col-4">
+                    <div class="mb-3 col-sm-6 col-md-4">
                         <label for="lopSV" class="form-label">Lớp</label>
                         <input type="text" class="form-control" id="lopSV">
                         <div class="noti-error" id="noti-lopSV">
                           <p></p>
                         </div>
                     </div>
-                    <div class="mb-3 col-4">
+                    <div class="mb-3 col-sm-12 col-md-4">
                         <label for="gioiTinh" class="form-label">Giới Tính</label>
-                        <div class="gioiTinh row">
+                        <div class="gioiTinh row ps-3">
                             <div class="form-check col-4">
                                 <input class="form-check-input" type="radio" name="flexRadioDefault" id="nam">
                                 <label class="form-check-label" for="nam">
@@ -162,21 +164,21 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="mb-3 col-4">
+                    <div class="mb-3 col-sm-12 col-md-4">
                         <label for="sdt" class="form-label">Số điện thoại</label>
                         <input type="text" class="form-control" id="sdt">
                         <div class="noti-error" id="noti-sdt">
                           <p></p>
                         </div>
                     </div>
-                    <div class="mb-3 col-4">
+                    <div class="mb-3 col-sm-12 col-md-4">
                         <label for="email" class="form-label">Email</label>
                         <input type="email" class="form-control" id="email">
                         <div class="noti-error" id="noti-email">
                           <p></p>
                         </div>
                     </div>
-                    <div class="mb-3 col-4">
+                    <div class="mb-3 col-sm-12 col-md-4">
                         <label for="linkFb" class="form-label">Link Facebook</label>
                         <input type="text" class="form-control" id="linkFb">
                         <div class="noti-error" id="noti-linkFb">
@@ -257,7 +259,7 @@
               </div>
               <div class="mb-3">
                 <label for="characters" class="form-label">4. Chọn 1 lựa chọn phù hợp với bạn cho mỗi câu bên dưới:</label>
-                <div class="characters row">
+                <div class="characters row ps-3">
                     <div class="form-check col-6">
                         <input class="form-check-input" type="radio" name="flexRadio1" id="teamwork" value="Làm việc teamwork">
                         <label class="form-check-label" for="teamwork">
