--- a/html/recruitment/form-recruit.html
+++ b/html/recruitment/form-recruit.html
@@ -59,9 +59,8 @@
             >
               <span class="navbar-toggler-icon"></span>
             </button>
-            <!-- justify-content-end -->
             <div
-              class="collapse navbar-collapse navMenu"
+              class="collapse navbar-collapse justify-content-end navMenu"
               id="navbarNav"
             >
               <ul class="navbar-nav">
